False alarm, no need to eval
Thought it was needed to prevent reference issues when minifying / mangling

--- a/lib/sprockets/export/template.js.erb
+++ b/lib/sprockets/export/template.js.erb
@@ -3,7 +3,7 @@
     <%= indent(@export, 4 )%>
   }).call(this);
 
-  eval("var <%= @namespace %> = this.<%= @namespace %>");
+  var <%= @namespace %> = this.<%= @namespace %>;
 
   (function() {
     <%= indent(@body, 4) %>
