Add optional "noglobal" flag to prevent setting window[namespace] as a fallback

--- a/lib/sprockets/export/template.js.erb
+++ b/lib/sprockets/export/template.js.erb
@@ -1,11 +1,12 @@
 <%= @head %>
 
 (function() {
+<%= "  var context = {};\n" if @flags.noglobal -%>
   (function() {
     <%= indent(@export, 4 )%>
-  }).call(this);
+  }).call(<%= @flags.noglobal ? "context" : "this" %>);
 
-  var <%= @namespace %> = this.<%= @namespace %>;
+  var <%= @namespace %> = <%= @flags.noglobal  ? "context" : "this" %>.<%= @namespace %>;
 
   (function() {
     <%= indent(@tail, 4) %>
