Simplify context setup

--- a/lib/sprockets/export/template.js.erb
+++ b/lib/sprockets/export/template.js.erb
@@ -1,12 +1,13 @@
 <%= @head %>
 
 (function() {
-<%= "  var context = {};\n" if @flags.noglobal -%>
-  (function() {
-    <%= indent(@export, 4 )%>
-  }).call(<%= @flags.noglobal ? "context" : "this" %>);
+  var context = <%= @flags.noglobal ? "{}" : "this" %>;
 
-  var <%= @namespace %> = <%= @flags.noglobal  ? "context" : "this" %>.<%= @namespace %>;
+  (function() {
+    <%= indent(@export, 4)%>
+  }).call(context);
+
+  var <%= @namespace %> = context.<%= @namespace %>;
 
   (function() {
     <%= indent(@tail, 4) %>
